<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Customer Firebase</string>

    <string name="site_title">Customer Firebase</string>
    <string name="tutorial_title">
        Firebase\n
        authentication
    </string>

    <string name="field_required">This Field is Required</string>
    <string name="reminder_notification_channel_id" translatable="false">reminder_channel</string>
    <string name="reminder_notification_channel_name" translatable="true">Reminder</string>
    <string name="reminder_notification_channel_description">User reminder</string>

    <string name="welcome_to">Welcome to </string>
    <string name="welcome_back">Welcome back</string>

    <string-array name="category_array">
        <item>Personal_Care</item>
        <item>Home_Care</item>
        <item>Life_Style</item>
        <item>Agriculture</item>
        <item>Health_Care</item>
    </string-array>

    <!--Login-->
    <string name="email">Email</string>
    <string name="key">Customer Key</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="dont_have_an_account_yet_register_now">
        Don\'t have an account yet? <font color="#FFBD2A"><big><b>Register Now</b></big></font>
    </string>
    <string name="registration_successful">Registraion successful!</string>

    <!--Register-->
    <string name="create_account">Create Account</string>
    <string name="name">Name :  </string>
    <string name="register">Register</string>
    <string name="or_register_with">Or register with</string>
    <string name="already_have_an_account">Already have an account? <font color="#FFBD2A"><big><b>Login</b></big></font></string>
    <string name="login_successful">Login Successful!</string>
    <string name="request_canceled">Request canceled</string>
    <string name="todo">TODO</string>
    <string name="welcome_customer">Welcome Customer</string>
    <string name="address">Address</string>
    <string name="village">Village</string>
    <string name="district">District</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="save_location">save Location</string>
    <string name="get_location">get location</string>
    <string name="product_details">Product Details</string>
    <string name="product_name">Product Name : </string>
    <string name="load_product">Load Product</string>
    <string name="insert_product">Insert Product</string>
    <string name="total">Total : </string>
    <string name="price">Price : </string>
    <string name="quantity">Quantity : </string>
    <string name="welcome">Welcome</string>
    <string name="no_customer_added">No Customer Added</string>
    <string name="customer_name">Customer Name</string>
    <string name="no_product_found">No Product Found</string>
    <string name="product_category">Product Category :</string>
    <string name="click_here_for_more_info">Click here for more info</string>
    <string name="layout">layout</string>
    <string name="purchase">Purchase</string>
    <string name="cancel">Cancel</string>
    <string name="oops">OOPS</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_internet_connection">Please Check Your Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="_0">0</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="category">Category</string>
    <string name="username">Username</string>
    <string name="date">date</string>
</resources>
