<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_lightgrey_transparent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivWifi"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_wifi_off_24" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvOops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/oops"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize_xxlarge" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_internet_connection"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize_xlarge" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_check_your_internet_connection"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize_xlarge" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/retry"
        android:textAllCaps="true" />


</LinearLayout>