<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_customer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/colorPrimary"
    android:padding="10dp">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvCustomerNam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/mtvCustomerNam"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvCustomerAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/address"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtvCustomerName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvCustomerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/address"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/mtvCustomerAddr"
        app:layout_constraintTop_toBottomOf="@+id/mtvCustomerName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvCustomerCit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/district"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtvCustomerAddr" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvCustomerCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/district"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/mtvCustomerCit"

        app:layout_constraintTop_toBottomOf="@+id/mtvCustomerAddr" />

</androidx.constraintlayout.widget.ConstraintLayout>

